rancher-machine.tf
resource "aws_security_group" "rancher-machine-private" {
  name        = "rancher-machine-private"
  description = "Allow outbound to all, inbound on 500/4500 UDP, 2376 TCP"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = ["${aws_security_group.rancher-server.id}"]
  }

  ingress {
    from_port       = 500
    to_port         = 500
    protocol        = "udp"
    security_groups = ["${aws_security_group.rancher-server.id}"]
  }

  ingress {
    from_port       = 4500
    to_port         = 4500
    protocol        = "udp"
    security_groups = ["${aws_security_group.rancher-server.id}"]
  }

  ingress {
    from_port       = 2376
    to_port         = 2376
    protocol        = "tcp"
    security_groups = ["${aws_security_group.rancher-server.id}"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "rancher-machine-public" {
  name        = "rancher-machine-public"
  description = "Allow outbound to all, inbound on 500/4500 UDP, 2376 TCP, and 80/443 TCP (public)"
  vpc_id      = "${var.vpc_id}"

  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 500
    to_port         = 500
    protocol        = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 4500
    to_port         = 4500
    protocol        = "udp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port       = 2376
    to_port         = 2376
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
